# sonify_it

./: CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: main.yml
include/receiving/: fudi_decoder.h
include/sending/: fudi_encoder.h
launch/: turtlebot2_share.launch
src/: README.md
src/receiving/: fudi_decoder.cpp  sound_system_receiver.cpp
src/sending/: fudi_encoder.cpp  sound_system_sender.cpp
src/turtlebot2_share/: README.md  comms_turtlebot2_share.pd  controller_turtlebot2_share.pd  obj.looping-sampler.pd  obj.samp.pd  pd_turtlebot2_share.py  send_turtlebot2_distance.py  send_turtlebot2_status.py  send_turtlebot2_velocity.py  waveSynth.cl.pd
