<?xml version="1.0"?>
<!-- Refer to https://wiki.ros.org/catkin/package.xml for guidance on changes -->
<package format="2">
  <name>sonify_it</name>
  <version>0.0.1</version>
  <description>SonifyIt: a sound generation system for robots</description>

  <maintainer email="zhangbr@oregonstate.edu">Brian Zhang</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/shareresearchteam/sonify_it/</url> -->
  <!-- <url type="website">http://wiki.ros.org/sonify_it</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <!-- Core dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
<!--  todo: <doc_depend>doxygen</doc_depend> -->
  <!-- Message dependencies, add as needed -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <!-- Pure Data is required for succesful execution -->
  <exec_depend>puredata</exec_depend>
</package>
